# mammon

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs
